--- a/index.html
+++ b/index.html
@@ -10,57 +10,42 @@
 		<link rel="stylesheet" type="text/css" href="./CSS/style.production.css"/>
   </head>
   ​
+	<header class="page-header">
+		<img src="img/favicon.png" alt="logo" class="page-header__item">
+		<nav class="main-navigation page-header__item">
+			<ul role="menubar" class="navigation-list">
+				<li role="presentation">
+					<a href="./index.html" role="menuitem" class="navigation-list_item navigation-list_active">Home</a>
+				</li >
+				<li role="presentation">
+					<a href="./about.html" role="menuitem" class="navigation-list__item">About</a>
+				</li>
+				<li role="presentation">
+					<a href="./contact.html" role="menuitem" class="navigation-list__item">Contact</a>
+				</li>
+				<li role="presentation">
+					<a href="./work.html" role="menuitem" class="navigation-list__item">Work</a>
+				</li>
+			</ul>
+		</nav>
+	</header>
 
-    <header class="page-header">
-      <img src="img/favicon.png" alt="logo" class="page-header__item">
-      <nav class="main-navigation page-header__item">
-        <ul role="menubar" class="navigation-list">
-          <li role="presentation">
-            <a href="index.html" role="menuitem" class="navigation-list_item navigation-list_active">Home</a>
-          </li >
-          <li role="presentation">
-            <a href="about.html" role="menuitem" class="navigation-list__item">About</a>
-          </li>
-          <li role="presentation">
-            <a href="contact.html" role="menuitem" class="navigation-list__item">Contact</a>
-          </li>
-          <li role="presentation">
-            <a href="work.html" role="menuitem" class="navigation-list__item">Work</a>
-          </li>
-        </ul>
-      </nav>
-    </header>
-
-
-      <section class="profile">
-        <img src="img/chrisuhler.jpg" class="profile__portrait" alt="chrisuhlerportrait">
-          ​
-          <h1>Hello World!</h1>
-          ​
-          <p>
-            My name is Chris Uhler. I am web developer from, Medford oregon
-          </p>
-          ​
-          <button type="button">Check out some of my code</button>
-          <button class="button__secondary">Secondary Button</button>
-
-        <div class="profile">
-        </div>
-      </section>
-          ​
-
+	<section class="profile">
+		<img src="img/chrisuhler.jpg" class="profile__portrait" alt="chrisuhlerportrait">	​
+			<h1>Hello World!</h1>
+			<p>My name is Chris Uhler. I am web developer from, Medford oregon</p>
+			<button type="button">Check out some of my code</button>
+			<button class="button__secondary">Secondary Button</button>
+	</section>
+				​
+	<footer class="page-footer">
+		<p>Find Me on<p>
+		<div class="social-media">
+			<img src="img/Facebook.svg" width="30" height="30" alt="facebook" />
+			<img src="img/twitter.svg" width="30" height="30" alt="twitter" />
+			<img src="img/linkedin.svg" width="30" height="30" alt="linkedin" />
+		</div>
+	</footer>
         ​
-        <footer class="page-footer">
-          <p>Find Me on<p>
-            <div class="social-media">
-              <img src="img/Facebook.svg" width="30" height="30" alt="facebook" />
-              ​
-              <img src="img/twitter.svg" width="30" height="30" alt="twitter" />
-              ​
-              <img src="img/linkedin.svg" width="30" height="30" alt="linkedin" />
-            </div>
-<h1></h1>
-        </footer>
-        ​
-        <script src="js/tota11y.min.js">
-        </script>
+<script src="js/tota11y.min.js">
+</script>
